# vesuvius-sentinel

./: .gitignore  README.md  _config.yml  pyproject.toml  requirements.txt  vesuvius.html
images/: vesuvius.html  vesuvius_from_mappatella.avif  vesuvius_interactive.html
remote_sensing/: remote_sensing_vesuvius.ipynb  utils.py
scripts/: export-pip-requirements.ps1  run-jupyter.ps1
