[tool.poetry]
name = "vesuvius-sentinel"
version = "0.1.0"
description = ""
authors = ["Vincenzo <vincenzo.ventriglia@outlook.com>"]
readme = "README.md"
packages = [{include = "vesuvius_sentinel"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
pandas = "2.2.1"
geopandas = "0.14.3"
matplotlib = "3.8.3"
plotly = "^5.18.0"
seaborn = "^0.13.2"
earthengine-api = "0.1.393"
jupyter = "^1.0.0"
notebook = "6.5.3"
traitlets = "5.9.0"
black = "^22.3.0"
mypy = "^0.950"
folium = "0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
